﻿/**
* 2007-2016 PrestaShop
*
* NOTICE OF LICENSE
*
* This source file is subject to the Academic Free License (AFL 3.0)
* that is bundled with this package in the file LICENSE.txt.
* It is also available through the world-wide-web at this URL:
* http://opensource.org/licenses/afl-3.0.php
* If you did not receive a copy of the license and are unable to
* obtain it through the world-wide-web, please send an email
* to license@prestashop.com so we can send you a copy immediately.
*
* DISCLAIMER
*
* Do not edit or add to this file if you wish to upgrade PrestaShop to newer
* versions in the future. If you wish to customize PrestaShop for your
* needs please refer to http://www.prestashop.com for more information.
*
*  @author    Hennes Hervé <contact@h-hennes.fr>
*  @copyright 2013-2016 Hennes Hervé
*  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
*  http://www.h-hennes.fr/blog/
*/

2016-05-19 : Version initiale
2016-06- : New commands
2016-09-17 - V 0.2.0 : New phar archive
2016-09-22 - V 0.2.1 : Replace configuration file in yml by file in php to optimize phar generation
2016-09-23 - V 0.2.2 : Cache management improvements, add media cache
2016-10-07 - V 0.2.3 : Fix media command
2016-10-10 - V 0.3.0 : New functionnaly : install prestashop from command line
2016-11-03 - V 0.4.0 : New command to get all configurations